fixed navbar showing scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2745,7 +2745,7 @@ input, select, textarea {
 
 			#header > header .avatar {
 				display: block;
-				margin: 0 auto 2.25em auto;
+				margin: 0 auto 0.5em auto;
 				width: 8em;
 			}
 
